NOCC 0.9.6    ??

    * Added Icelandic translation.
    * Fixed attachments bug [#509857]. Thanks crystalcyril.
    * Simplified handling of attachments, removed 'num_attach' stuff.
    * Switched from 'X-Mailer' header to 'User-Agent' [#547441]
    * Added folder management to pref page.
    * Added Folder and Page selection to inbox page.
    * Added status bar to give links to folders containing new mesages.
    * Removed 'conf', 'mailhost', 'user' and 'passwd' from aff_mail arguments.
    * Renamed 'change_date' to 'format_date' and simplified it.
    * Trimmed unnecessary passing of session variables to some functions.
    * Moved common stuff out of conf.php into a new 'common.php' file.
    * Include functions and check_lang in common, rather than in every script.
    * Replaced session_* calls with use of $_SESSION[].
    * Store more stuff in session, to save passing them around in the URL all
      the time (e.g. 'lang', 'theme' 'sort', 'sortdir', 'folder' etc.)
    * Fixed forwarding behaviour, so that original message is forwarded
      as a MIME attachment.
    * Exception from nocc_imap now returns useful error information.
    * Badly placed return statement was preventing connection
      exception from being reported to the user.
    * Moving to PEAR coding guidelines slowly (spaces instead of tabs, better
      comments should follow slowly).
    * Trim mail subjects when longer than 55 chars and displaying Inbox
      (patch thanks to Arno Bean #477829).
    * Fixed some regexp issues (patch thanks to Patrick #522389).
    * Added fix for mime encoding problem (#495626).
    * Fixed lang returning to default after prefs page.
    * Added 'allow_address_change' configuration parameter (patch #490576).
    * Seperated imap_* functions into a nocc_imap class for extendability.
    * Added HTTP headers to avoid caching from proxies and browsers.
    * Added request receipt feature.