@@ -1,5 +1,7 @@
 NOCC 0.9.6    ??
 
+    * Relaxed debugging flags to allow connection messages to be reported
+      via imap_last_error.
     * Added Icelandic translation.
     * Fixed attachments bug [#509857]. Thanks crystalcyril.
     * Simplified handling of attachments, removed 'num_attach' stuff.
